# redis-in-rust

./: Cargo.toml  README.md  TODO.md  dump.rdb  flake.nix  justfile  rust-toolchain.toml
src/: executor.rs  futures.rs  kv_store.rs  lib.rs  reactor.rs  redis.rs
test/: tester.jl
